Closed
Bug 166791
Opened 23 years ago
Closed 23 years ago
invisible insertion point after cancelling typeaheadfind by moving focus
Categories
(SeaMonkey :: Find In Page, defect, P3)
SeaMonkey
Find In Page
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.2beta
People
(Reporter: jruderman, Assigned: aaronlev)
References
Details
(Whiteboard: se-radar)
Attachments
(1 file)
|
3.36 KB,
patch
|
mjudge
:
review+
alecf
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Go to http://www.cs.hmc.edu/~jruderma/s/.
2. Press 'g'. This focuses the Google link.
3. Press Tab or Alt+1 while the typeaheadfind insertion point is still blinking.
Result: "type ahead find stopped" in the status bar, and focus is in the Google
textbox, but there's no blinking caret in the textbox. Typing into the textbox
does not make the caret appear.
| Reporter | ||
Updated•23 years ago
|
Blocks: focusblink
| Assignee | ||
Comment 1•23 years ago
|
||
Normally type ahead find hides the caret when the selection changes. It should
only do this if the caret's current dom selection is the doc's dom selection.
| Assignee | ||
Comment 2•23 years ago
|
||
seeking r=mjudge
Severity: minor → normal
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla1.2beta
Comment on attachment 100518 [details] [diff] [review]
Add nsICaret::GetCaretDOMSelection so we can see if we're dealing with the doc's caret
r=mjudge
Attachment #100518 -
Flags: review+
| Assignee | ||
Comment 4•23 years ago
|
||
seeking sr=alecf
Comment 5•23 years ago
|
||
Comment on attachment 100518 [details] [diff] [review]
Add nsICaret::GetCaretDOMSelection so we can see if we're dealing with the doc's caret
sr=alecf
Attachment #100518 -
Flags: superreview+
| Assignee | ||
Comment 6•23 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 7•23 years ago
|
||
vrfy'd fixed on all platforms, 2002.09.26.08 moz trunk. (used ctrl-1 on mac for
the web page access key.)
Status: RESOLVED → VERIFIED
OS: Windows XP → All
Hardware: PC → All
Updated•23 years ago
|
Whiteboard: se-radar
Updated•18 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•