Bug 166791. Invisible insertion point after tabbing to text field when typeaheadfind is active. r=mjudge, sr=alecf